# home-station

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/boot/: CMakeLists.txt  main.cpp
src/bsp/: CMakeLists.txt
src/bsp/meteostation/: CMakeLists.txt  bsp.cpp  bsp.hpp  gpio.hpp  log.cpp
src/bsp/share/: bsp.hpp  bsp_template.hpp  log.hpp
src/csp/: CMakeLists.txt
src/csp/F103C8/: .mxproject  CMakeLists.txt  F103C8.gpdsc  F103C8.ioc
src/csp/F103C8/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
src/csp/F103C8/Core/Src/: gpio.c  main.c  stm32f1xx_it.c  usart.c
src/csp/ST/F103C8/: CMakeLists.txt  csp.cpp  csp.hpp  usb.hpp
src/csp/ST/F103C8/src/: .mxproject  F103C8.gpdsc  F103C8.ioc
src/csp/ST/F103C8/src/Core/Inc/: stm32f1xx_hal_conf.h
src/csp/ST/F103C8/src/Core/Src/: gpio.c  main.c  rcc.c  stm32f1xx_it.c
src/csp/ST/F103C8/src/USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_cdc_if.h
src/csp/ST/share/: usb.cpp
src/csp/share/: csp.hpp  csp_template.hpp  gpio_template.hpp  usb.hpp  usb_template.hpp
src/os/: CMakeLists.txt
src/os/no_os/ST/: CMakeLists.txt  os.cpp  os.hpp  queue.hpp
src/os/share/: os.hpp  os_template.hpp  queue_template.hpp
